--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Navigation -->
     <nav id="navbar" class="fixed w-full z-[1000] transition-all duration-500 py-6">
         <div class="container mx-auto px-6 md:px-12 flex justify-between items-center">
-            <div class="flex items-center gap-4 group cursor-pointer" onclick="window.location.href='index.html'">
+            <div class="flex items-center gap-4 group cursor-pointer" onclick="window.location.href='index'">
                 <div class="w-10 h-10 transition-transform group-hover:rotate-[360deg] duration-1000">
                     <svg viewBox="0 0 100 100" class="w-full h-full fill-[#C5A059]">
                         <rect x="40" y="20" width="20" height="60" /><rect x="25" y="40" width="15" height="40" /><rect x="60" y="40" width="15" height="40" /><path d="M10 85 Q50 75 90 85 L90 88 Q50 78 10 88 Z" />
@@ -280,7 +280,7 @@
     <section id="services" class="py-24 md:py-32 bg-slate-50 relative overflow-hidden">
         <div class="container mx-auto px-6 relative z-10">
             <div class="max-w-4xl mx-auto text-center mb-20 reveal">
-                <span class="text-[#C5A059] text-sm font-bold tracking-[0.5em] uppercase mb-4 block">Elevating Standards</span>
+                <span class="text-[#C5A059] text-sm font-bold tracking-[0.5em] uppercase mb-4 block">Property Management</span>
                 <h2 class="text-4xl md:text-6xl font-serif font-bold text-[#010B28] mb-6">NEXORA <span class="text-[#C5A059] italic">SERVICES</span></h2>
             </div>
             
